# ezwowaddon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.win  FUNDING.yml  LICENSE  README.md  build.sh  ezwow.py  ezwow.spec  pyproject.toml  test.sh
.github/workflows/: build.yml  catalog-check.yml  ci.yml  regression-security.yml  runner.yml
catalog/: addons.json
docs/superpowers/plans/: 2026-05-03-ezwowaddon-v2.md
docs/superpowers/specs/: 2026-05-03-ezwowaddon-v2-design.md
ezwow/: __init__.py  __main__.py  _entry.py  cli.py  config.py
ezwow/catalog/: __init__.py  loader.py  remote.py  schema.py
ezwow/catalog/data/: addons.json
ezwow/core/: __init__.py  backup.py  deps.py  detector.py  github.py  installer.py  manifest.py  pipeline.py  profile.py  updater.py
ezwow/ui/: __init__.py  app.py
ezwow/ui/tabs/: __init__.py  browse.py  client_mods.py  installed.py  profiles.py  settings.py  updates.py
ezwow/ui/widgets/: addon_card.py  notification.py  toast.py
scripts/: catalog_check.py
tests/: conftest.py  test_backup.py  test_catalog_data.py  test_catalog_loader.py  test_catalog_remote.py  test_catalog_schema.py  test_cli.py  test_deps.py  test_detector.py  test_github.py  test_installer.py  test_manifest.py  test_pipeline.py  test_profile.py  test_smoke.py  test_updater.py
