[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezwowaddon"
version = "2.1.0"
description = "World-class Turtle WoW addon and client-mod manager"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jamal Al-Sarraf" }]
keywords = ["wow", "world of warcraft", "turtle wow", "addon", "manager"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
]
dependencies = [
  "requests>=2.32",
  "customtkinter>=5.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "responses>=0.25",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-requests",
]

[project.scripts]
ezwow = "ezwow.__main__:main"

[project.urls]
Homepage = "https://github.com/jalsarraf0/ezwowaddon"
Issues = "https://github.com/jalsarraf0/ezwowaddon/issues"

[tool.setuptools]
packages = ["ezwow", "ezwow.catalog", "ezwow.core", "ezwow.ui", "ezwow.ui.tabs", "ezwow.ui.widgets"]

[tool.setuptools.package-data]
"ezwow.catalog" = ["data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["customtkinter.*", "responses.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
source = ["ezwow"]
omit = ["ezwow/ui/*", "ezwow/__main__.py"]

[tool.pyright]
include = ["ezwow", "tests", "ezwow.py"]
venvPath = "."
venv = ".venv"
extraPaths = ["."]
pythonVersion = "3.12"
reportMissingImports = "warning"
